Made Primary dashboard function with Temp, Hum, Wind, and UV Index including background color

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <div style="padding-top:1%" class = "col-sm-8">
                     <div class="wthr-summ row">
                         <div class="col-sm-12">
-                            <h3 id="dispCity">Atlanta</h3>
-                            <h4 id="dispTmp">Temperature</h4>
-                            <h4 id="dispHum">Humidity</h4>
-                            <h4 id="dispWnd">Wind Speed:</h4>
-                            <h4 id="dispUV">UV Index</h4>
+                            <h3 id="dispCity">City</h3>
+                            <h4>Temperature:<span id="dispTmp"></span></h4>
+                            <h4>Humidity:<span  id="dispHum"></span></h4>
+                            <h4>Wind Speed:<span id="dispWnd"> </span></h4>
+                            <h4>UV Index:<span style="color:white; margin-left:2px; padding-right:5px" id="dispUV"></span></h4>
                         </div>
                     </div> <!--End Internal Row-->
                     <div class = "row">
@@ -109,6 +109,7 @@
             </div> <!--End Row-->
         </div><!--End Container-->
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
         <script src="script.js" type="text/javascript"></script>
     </body>
