Remaining http changed to https

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div class="card" >
                                 <div class="card-body">
                                   <h6 id="Date-0" class="card-title">Date 0</h6>
-                                  <h6 id = "Weather-Icon-0" class="card-img"><img  style='width:90%; padding:0; margin:0' src="http://openweathermap.org/img/wn/01d@2x.png"></h6>
+                                  <h6 id = "Weather-Icon-0" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
                                   <h6 id="Temp-0"  class="card-text"> Temp </h6>
                                   <h6 id = "Hum-0" class="card-text"> Humidity</h6>
                                 </div>        
@@ -64,7 +64,7 @@
                             <div class="card">
                                 <div class="card-body">
                                   <h6 id="Date-1" class="card-title">Date 1</h6>
-                                  <h6 id = "Weather-Icon-1" class="card-img"><img  style='width:90%; padding:0; margin:0' src="http://openweathermap.org/img/wn/01d@2x.png"></h6>
+                                  <h6 id = "Weather-Icon-1" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
                                   <h6 id="Temp-1"  class="card-text"> Temp </h6>
                                   <h6 id = "Hum-1" class="card-text"> Humidity</h6>
                                 </div>        
@@ -75,7 +75,7 @@
                             <div class="card" >
                                 <div class="card-body">
                                   <h6 id="Date-2" class="card-title">Date 2</h6>
-                                  <h6 id = "Weather-Icon-2" class="card-img"><img  style='width:90%;padding:0; margin:0' src="http://openweathermap.org/img/wn/01d@2x.png"></h6>
+                                  <h6 id = "Weather-Icon-2" class="card-img"><img  style='width:90%;padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
                                   <h6 id="Temp-2"  class="card-text"> Temp </h6>
                                   <h6 id = "Hum-2" class="card-text"> Humidity</h6>
                                 </div>        
@@ -86,7 +86,7 @@
                             <div class="card" >
                                 <div class="card-body">
                                   <h6 id="Date-3" class="card-title">Date 3</h6>
-                                  <h6 id = "Weather-Icon-3" class="card-img"><img  style='width:90%; padding:0; margin:0' src="http://openweathermap.org/img/wn/01d@2x.png"></h6>
+                                  <h6 id = "Weather-Icon-3" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
                                   <h6 id = "Temp-3"  class="card-text"> Temp </h6>
                                   <h6 id = "Hum-3" class="card-text"> Humidity</h6>
                                 </div>        
@@ -97,7 +97,7 @@
                             <div class="card" >
                                 <div class="card-body">
                                   <h6 id="Date-4" class="card-title">Date 4</h6>
-                                  <h6 id = "Weather-Icon-4" class="card-img"><img  style='width:90%; padding:0; margin:0' src="http://openweathermap.org/img/wn/01d@2x.png"></h6>
+                                  <h6 id = "Weather-Icon-4" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
                                   <h6 id = "Temp-4"  class="card-text"> Temp </h6>
                                   <h6 id = "Hum-4" class="card-text"> Humidity</h6>
                                 </div>        
