fixed a small styling error where the cards aren't the same size

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     </div> <!--End Internal Row-->
 
                     <div class = "rowcard row">
-                        <div class ="colcard col-sm">
-                            <div class="card" >
+                        <div class ="colcard col-sm d-flex">
+                            <div class="card flex-fill" >
                                 <div class="card-body">
                                   <h6 id="Date-0" class="card-title">Date 0</h6>
                                   <h6 id = "Weather-Icon-0" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
@@ -66,9 +66,9 @@
                             </div> <!--Card 0-->
                         </div> <!--End Column-->
                         
-                        <div class ="colcard col-sm">
+                        <div class ="colcard col-sm d-flex">
                             <div class="card">
-                                <div class="card-body">
+                                <div class="card-body flex-fill">
                                   <h6 id="Date-1" class="card-title">Date 1</h6>
                                   <h6 id = "Weather-Icon-1" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
                                   <h6 id="Temp-1"  class="card-text"> Temp </h6>
@@ -77,8 +77,8 @@
                             </div> <!--Card 1-->
                         </div> <!--End Column-->
 
-                        <div class = "colcard col-sm">
-                            <div class="card" >
+                        <div class = "colcard col-sm d-flex">
+                            <div class="card flex-fill" >
                                 <div class="card-body">
                                   <h6 id="Date-2" class="card-title">Date 2</h6>
                                   <h6 id = "Weather-Icon-2" class="card-img"><img  style='width:90%;padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
@@ -88,9 +88,9 @@
                             </div> <!--Card 2-->
                         </div> <!--End Column-->
 
-                        <div class = "colcard col-sm">
-                            <div class="card" >
-                                <div class="card-body">
+                        <div class = "colcard col-sm d-flex">
+                            <div class="card flex-fill" >
+                                <div class="card-body ">
                                   <h6 id="Date-3" class="card-title">Date 3</h6>
                                   <h6 id = "Weather-Icon-3" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
                                   <h6 id = "Temp-3"  class="card-text"> Temp </h6>
@@ -99,8 +99,8 @@
                             </div> <!--Card 3-->
                         </div> <!--End Column-->
 
-                        <div class = "colcard col-sm">
-                            <div class="card" >
+                        <div class = "colcard col-sm d-flex">
+                            <div class="card flex-fill" >
                                 <div class="card-body">
                                   <h6 id="Date-4" class="card-title">Date 4</h6>
                                   <h6 id = "Weather-Icon-4" class="card-img"><img  style='width:90%; padding:0; margin:0' src="https://openweathermap.org/img/wn/01d@2x.png"></h6>
